--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   create a software design, responsive design and many more...
                 </p>
                 <a
-                  href="documents/Samarpit_Nandanwar_8625071710.pdf"
+                  href="https://drive.google.com/file/d/1WxnZe8JM8cHXO8mdnwK4KzIUittIhJ-7/view?usp=drive_link"
                   class="btn"
                   >Download Resume</a
                 >
