--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <p>Phone : <span>+91 8625071710</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>City : <span>Secunderabad, Telangana</span></p>
+                        <p>City : <span>Amravati, Maharashtra</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Birthday : <span>17 oct 2002</span></p>
@@ -681,7 +681,7 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
                 <h4>Address</h4>
-                <p>Flat No. 101, Block-4, GK Pride, Yapral, Malkajgiri, Secunderabad, Telangana-500087</p>
+                <p>Gurukrupa Park, Navsari, Amravati</p>
               </div>
               <!-- Contact info item end -->
               <!-- Contact info item start -->
